# iris

./: CLAUDE.md  FINAL_REPORT.md  IMPLEMENTATION.md  ITERATION_1_HUMAN_REVIEW.md  ITERATION_1_UNDERSTANDING.md  PLAN.md  README.md  REVIEW.md  TASK.md  USAGE.md  USER_FEEDBACK.md  pyproject.toml
implementer/: IMPLEMENTATION.md
issues/: 001-speech-cutoff.md
notes/: battery-consumption.md  macos-camera-permissions.md  multi-speaker-diarization.md  roomba-base.md  servo-control.md  soldering.md
planner/: PLAN.md
plans/: listen-modes.md  mute.md  visual-mode.md
reviewer/: REVIEW.md
src/computer_voice_interface/: computer.py  computer_fsm.py  functions.py  llama2.py  llm.py  summarize.py  ui.py  voice.py
src/iris/: computer.py  dictation.py  functions.py  llm.py  ui.py  voice.py
tester/: USAGE.md  test_dev_queues.py
user/: FEEDBACK.md
