[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iris"
version = "0.1.0"
description = "Iris — a personal assistant with eyes, ears, and a voice"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docopt>=0.6.2",
    "opencv-python>=4.8.0",
    "openai>=0.25.0",
    "openai-whisper",
    "PyAudio>=0.2.13",
    "soundfile",
    "SpeechRecognition>=3.9.0",
    "spacy>=3.4.0",
    "textual>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "black>=22.12.0",
    "flake8>=6.0.0",
]

[project.scripts]
iris = "iris.computer:main"
iris-dictation = "iris.dictation:main"
iris-summarize = "iris.summarize:main"
